Fix invisible input in dark mode (#21)

--- a/src/css/options.scss
+++ b/src/css/options.scss
@@ -45,6 +45,8 @@
   }
 
   .text-input {
+    background-color: var(--constrast-color);
+    border-width: thin;
     color: var(--font-color);
     padding: 5px;
     width: 45%;
